--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,15 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "*.tsx"],
-  "exclude": ["node_modules", "dist"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": [
+    "*.ts",
+    "*.tsx",
+    "components/**/*.ts",
+    "components/**/*.tsx",
+    "utils/**/*.ts",
+    "utils/**/*.tsx",
+    "supabase/**/*.ts",
+    "supabase/**/*.tsx"
+  ],
+  "exclude": ["node_modules", "dist"]
 }
